# calculadora_de_costo_y_ganancias

./: .gitignore  README.md  prompt.txt  pyproject.toml  requirements.in  requirements.txt  run.py  setup.py
auth_api/: crud.py  database.py  main.py  models.py  schemas.py  security.py
auth_api/routers/: auth.py
config/: settings.py
core/: logger_config.py
core/application/: Inventory_service.py  auth.py  config_manager.py  inventory_service.py  mvp_service.py  report_exporter.py  sii_integration.py  sku_generator.py
core/domain/: entietes.py  entities.py  inventory.py  validators.py
core/infrastructure/: database.py  repositories.py  sii_certificate.py  sii_factory.py
costos_api/: crud.py  database.py  main.py  models.py  schema.py  schemas.py
costos_api/routers/: __init__.py  costos.py
database/: database.py
desktop_app/: api_client.py  gui.py  logging_config.py
desktop_app/view/: dashboard.py
inventory_api/: __init__.py  crud.py  database.py  main.py  models.py  schemas.py
inventory_api/routers/: __init__.py  costos.py  inventory.py
presentation/desktop/: initial_setup.py  inventory_ui.py  login_window.py  main_window.py  mvp_window_check_list.py  product_manager.py  user_manager.py
shared/: config.py
tests/: conftest.py
tests/integration/: test_auth_additional.py  test_auth_db.py  test_auth_flow.py  test_costos_endpoint.py  test_integration.py  test_inventory_api.py
tests/unit/: test_api_client.py  test_auth_service.py  test_crud_costos.py  test_crud_inventory.py  test_inventory_service.py  test_logger.py
utils/: logger.py
(+7 files in other folders)
